# distill-sql

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
assets/: architecture.d2
configs/: eval_all.yaml  eval_base.yaml  eval_quantized.yaml  eval_teacher_only.yaml  teacher.yaml  trace_filter.yaml  train_14b_cuda.yaml  train_1p5b.yaml  train_1p5b_cuda.yaml  train_3b.yaml  train_3b_smoke.yaml  train_7b_cuda.yaml  train_ablation.yaml  train_primary.yaml
docs/: cloud_a100.md  hf_space.md  methodology.md  recording_demo.md
reports/: error_analysis.md  latency.json  latency.md  results.json  results.md
reports/predictions/: base_qwen_0p5b.jsonl  distilled_1p5b.jsonl  distilled_1p5b_q4.jsonl  distilled_3b.jsonl  distilled_7b.jsonl  distilled_ablation_direct.jsonl  distilled_primary.jsonl  gpt_4o_mini_reference.jsonl
scripts/: 01_prepare_spider.py  02_generate_teacher_traces.py  02b_rehydrate_traces.py  02c_filter_long_traces.py  03_train_student.py  04_eval_all.py  05_make_report.py  06_error_analysis.py  07_benchmark_latency.py  cloud_eval_cuda.py  cloud_train_cuda.py  make_demo_gif.py  run_a100.sh  run_all_post_traces.sh  score_jsonl.py
space/: .gitignore  README.md  app.py  requirements.txt
src/distill_sql/: __init__.py  _compat.py  cli.py  config.py
src/distill_sql/data/: __init__.py  prompts.py  spider.py
src/distill_sql/eval/: __init__.py  compare.py  error_analysis.py  metrics.py  runner.py
src/distill_sql/sql/: __init__.py  normalize.py  validate.py
src/distill_sql/student/: __init__.py  infer.py  train.py  utils.py
src/distill_sql/teacher/: __init__.py  client.py  generate.py  infer.py
tests/: conftest.py
tests/fixtures/: spider_mini.py
tests/integration/: test_official_evaluator.py  test_train_smoke.py
tests/unit/: test_cli.py  test_config.py  test_error_analysis.py  test_eval_compare.py  test_eval_runner.py  test_eval_runner_format.py  test_metrics.py  test_prompts.py  test_spider_loader.py  test_sql_normalize.py  test_sql_validate.py  test_student_utils.py  test_teacher_client.py  test_trace_generate.py
